--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
       {
         "manifest_version": 2,
         "name": "Set Cookie: No secure - No HttpOnly",
-        "version": "1.2",
+        "version": "1.21",
         "description": "Disable 'Secure' & 'HttpOnly' in set-cookie header",
         "homepage_url": "https://github.com/ThomazPom/Moz-Ext-Set-Cookie-No-secure-No-HttpOnly",
         "icons": {
@@ -13,7 +13,7 @@
         ,
         "browser_action": {
           "default_icon": "icons/38.png",
-          "default_title": "X-Frame-Options are ignored",
+          "default_title": "Ignoring Secure & HttpOnly flags",
           
           "default_popup": "popup.html"
         },
